force-app/main/default/objects/Comparison_Sales_Report_YoY__c/Comparison_Sales_Report_YoY__c.object-meta.xml
<CustomObject>
    <label>Comparison Sales Report(YoY)</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Comparison Sales Report(YoY) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comparison Sales Report(YoY)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>