force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Accumulated_Amount_Last_Year_USD__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Amount_Last_Year_USD__c</fullName>
    <label>Accumulated Amount(Last Year USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>