force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Completed_Amount_YoD_USD__c.field-meta.xml
<CustomField>
    <fullName>Completed_Amount_YoD_USD__c</fullName>
    <label>Completed Amount(YoD USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>