force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Completed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Completed_Rate__c</fullName>
    <formula>IF(Sales_Target_Month__c &lt;&gt; 0, (Completed_Amount_MoD_USD__c - Sales_Target_Month__c) /  Sales_Target_Month__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>