force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comparison Sales Report(YoY)</relationshipLabel>
    <relationshipName>Comparison_Sales_Report_YoY</relationshipName>
    <type>Lookup</type>
</CustomField>