force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <label>Hisense Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hisense_Entity</valueSetName>
    </valueSet>
</CustomField>