force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Management_Customer__c.field-meta.xml
<CustomField>
    <fullName>Management_Customer__c</fullName>
    <formula>Product_Line__r.Management_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management Customer</label>
    <type>Text</type>
</CustomField>