force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Customer_Product_Line__c</referenceTo>
    <relationshipLabel>Comparison Sales Report(YoY)</relationshipLabel>
    <relationshipName>Comparison_Sales_Report_YoY</relationshipName>
    <type>Lookup</type>
</CustomField>