force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Product_Line_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Text__c</fullName>
    <formula>Text( Product_Line__r.Product_Line_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Text</label>
    <type>Text</type>
</CustomField>