force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hisense USA</fullName>
            </value>
            <value>
                <fullName>USA(OEM)</fullName>
            </value>
            <value>
                <fullName>Hisense Mexico</fullName>
            </value>
            <value>
                <fullName>Hisense Australia</fullName>
            </value>
            <value>
                <fullName>Hisense Malaysia</fullName>
            </value>
            <value>
                <fullName>Hisense South Africa</fullName>
            </value>
            <value>
                <fullName>American Sales Department</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa Sales Department</fullName>
            </value>
            <value>
                <fullName>Asia-Pacific Sales Department</fullName>
            </value>
            <value>
                <fullName>Key Account Sales Department</fullName>
            </value>
            <value>
                <fullName>Europe Sales Department</fullName>
            </value>
            <value>
                <fullName>Communications Sales Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>