force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Sales_Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_Month__c</fullName>
    <label>Sales Target(Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>