force-app/main/default/objects/Comparison_Sales_Report_YoY__c/fields/Yearly_Growth_Rate_YtD__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Growth_Rate_YtD__c</fullName>
    <formula>IF(Sales_Target_Month__c &lt;&gt; 0, ( Completed_Amount_YoD_USD__c -  Accumulated_Amount_Last_Year_USD__c ) / Accumulated_Amount_Last_Year_USD__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Growth Rate(YtD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>